--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# Replay logs (you can download them yourself with get.sh)
+# Replay logs and working files
+# (you can download them yourself with setup.sh / get.sh)
 logs/
 archives/
+
+# Working files (generated from running the plugin)
+dump.raw
+vads/
 
 # Object files
 *.o
