Full looping, builds a story.

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@
 logs/
 archives/
 dumps/
-
-# Working files (generated from running the plugin)
 vads/
 vad_temps/
+story.txt
 
 # Object files
 *.o
